# Agent_Injection

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  config.json  example_usage.py  pyproject.toml  requirements.txt  security_reporting_agent.py
agent_injection/: __init__.py  container.py  decorators.py  exceptions.py  injector.py
analysis/: __init__.py  metrics.py  performance.py
cli/: __init__.py  __main__.py  main.py
core/: __init__.py  base.py  config.py  taxonomy.py
docs/: architecture.md  getting_started.md  taxonomy.md
examples/: advanced_injection.py  basic_agents.py  campaign.yaml  taxonomy.yaml
execution/: __init__.py  coordinator.py  engine.py  scheduler.py
feedback/: __init__.py  collectors.py  processors.py
reporting/: __init__.py  formatters.py  generators.py
scripts/: run_tests.py  setup_dev.py
strategies/: __init__.py  adaptive.py  parallel.py  sequential.py
tests/: __init__.py  test_cli.py  test_container.py  test_core.py  test_decorators.py  test_injector.py  test_integration.py
