[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-injection"
version = "0.1.0"
description = "A flexible dependency injection framework for AI agents and autonomous systems"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Becoming Giant Collective"},
]
keywords = ["agent", "injection", "dependency", "ai", "autonomous"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "typing-extensions>=4.0.0",
    "pydantic>=2.0.0",
    "httpx>=0.24.0",
    "sqlmodel>=0.0.14",
    "typer>=0.9.0",
    "tqdm>=4.65.0",
    "rich>=13.0.0",
    "pyyaml>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]
examples = [
    "requests>=2.28.0",
    "openai>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/becominggiantcollective/Agent_Injection"
Repository = "https://github.com/becominggiantcollective/Agent_Injection"
Issues = "https://github.com/becominggiantcollective/Agent_Injection/issues"

[project.scripts]
agent-injection = "cli.main:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["agent_injection*"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]